# mylib

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: pr-verify.yml  publish-rc.yml  release.yml  setup-branch-protection.yml
cmake/: mylibConfig.cmake.in
include/mylib/: mylib.h
profiles/: linux-gcc  macos-clang
src/: mylib.cpp
tests/: CMakeLists.txt  test_mylib.cpp
